Setup initial ktor

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,20 @@
-group = 'metal.miles.DapperDev'
+group = 'mfor.metal.DapperDev'
 version = '0.0.1-SNAPSHOT'
+
+buildscript {
+    ext.kotlin_version = '1.2.40'
+
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
 
 subprojects { p ->
     p.buildscript {
-        ext.kotlin_version = "1.1.51"
+        ext.kotlin = "1.2.40"
 
         repositories {
             mavenLocal()
@@ -12,23 +23,8 @@ subprojects { p ->
         }
 
         dependencies {
-            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
             classpath "org.jetbrains.kotlin:kotlin-frontend-plugin:0.0.23"
         }
-    }
-}
-
-subprojects {
-    ext.kotlin_version = "1.1.51"
-    ext.html_version = "0.6.6"
-    ext.ktor_version = "0.3.0"
-    ext.squash_version = "0.2.2"
-
-    repositories {
-        mavenLocal()
-        jcenter()
-        maven { url "http://dl.bintray.com/kotlin/kotlinx.html" }
-        maven { url "http://dl.bintray.com/kotlin/ktor" }
-        maven { url "https://dl.bintray.com/kotlin/squash" }
     }
 }
