--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,7 +33,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin"
 
     compile "io.ktor:ktor-server-netty:0.9.1"
 }
