--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,13 @@ group = 'mformetal.metal.DapperDev'
 version = '0.0.1-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.2.40'
+    ext.kotlin = '1.2.40'
 
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
     }
 }
 
